--- a/parts/background.tex
+++ b/parts/background.tex
@@ -201,31 +201,8 @@ For timelapse operations there was not many prior works that I could read from, 
 
 IP streaming was based on the gstreamer framework and I discuss that at length (with examples) on page~\pageref{gstreamertalk}.
 
-\begin{thebibliography}{9}
-\bibitem{footbibpack}
-Eric Domenjoud, The footbib package for Latex, February 2007, 
-\url{http://mirror.hmc.edu/ctan/macros/latex/contrib/footbib/footbib.pdf}
-Page~\pageref{ref:footbibpack}
-
-\bibitem{backsub}
-Massimo Picardi, Background Sutraction Techniques, Computer Vision Research Group, University of Technology, Sydney
-\url{http://www-staff.it.uts.edu.au/~massimo/BackgroundSubtractionReview-Piccardi.pdf}
-Page~\pageref{ref:backsub}
-
-\bibitem{digim}
-Howard E Burdick, Digital Imaging:Theory and Applications, McGraw-Hill  1997, University of Virginia, ISBN:0079130593, 9780079130594
-Page~\pageref{ref:digim}
-
-\bibitem{nokiasell}
-Chris Ducket, Nokia Sells Qt to Digia, techrepublic, August 9 2012, 
-\url{http://www.techrepublic.com/blog/australia/nokia-sells-qt-to-digia/1268}
-Page~\pageref{ref:nokiasell}
-
-\bibitem{gitvs}
-Scott Chacon (schacon), GitHub vs BitBucket, Pocoo
-\url{http://www.pocoo.org/~blackbird/github-vs-bitbucket/bitbucket.html}
-Page~\pageref{ref:gitvs}
-
-\end{thebibliography}
+%\begin{thebibliography}{9}
+%
+%\end{thebibliography}
 %
 %\end{document}
