--- a/parts/ipstreamer.tex
+++ b/parts/ipstreamer.tex
@@ -301,28 +301,8 @@ With much reluctance, I had to drop this web-side component too.
 \subsection{Afterthoughts}
 In the very near future I hope to merge Phonestreamer with the rest of the Watchdog application to make a fully-fledged image-processing application. With this in mind, my new version of Phonestreamer was called MediaStream and had buttons included in the main UI as empty slots for calling the two components of watchdog (the motion detector, and the time lapser).
 
-\begin{thebibliography}{9}
-
-\bibitem{phonestreamer}
-Mehmet Tekman (tetris11\_), Phonestreamer Announce Page, Maemo Forums
-\url{http://talk.maemo.org/showthread.php?t=70877}
-Page~\pageref{ref:phonstreamer}
-
-\bibitem{arpscanman}
-Roy Hills, Arp-Scan Author, \url{http://linux.die.net/man/1/arp-scan}
-Page~\pageref{ref:arpscanman}
-
-\bibitem{arpscanmaemo}
-Colin Stephane, Arp-Scan for Maemo Announce Page, Maemo Forums
-\url{http://talk.maemo.org/showthread.php?t=73467}
-Page~\pageref{ref:arpscanmaemo}
-
-\bibitem{amy}
-Angry Yoda Master(AMY), Feature request on Phonstreamer Announce thread, Maemo Forums,
-\url{http://talk.maemo.org/showthread.php?p=1054381\&highlight=profiles\#post1054381}
-Page~\pageref{ref:amy}
-
-\end{thebibliography}
+%\begin{thebibliography}{9}
+%\end{thebibliography}
 
 %
 %\end{document}
