--- a/parts/release.tex
+++ b/parts/release.tex
@@ -39,30 +39,5 @@ In the case of my old Phonestreamer app (now MediaStream) I got 10,000 downloads
 
 In the case of my current WatchDog app, the response has been less eager simply due to the lack N900 users still lingering around. The responses that I have recieved however have been overwhelmingly supportive and impressed and I have even dedicated this project write up to the first user who responded to my announce page (see dedication above the contents)\footnote{‘deed’ appraisal http://talk.maemo.org/showpost.php?p=1255370\&postcount=2}\label{ref:appraisal}. The lack of users is not surprising, but I am not worried since the watchdog application is extremely portable (the underlying logic does not solely rely on FCam or CImg) and due to the cross-platform nature of the Qt framework, means that I can port this application to another phone in the very near future (though to my dismay it is most likely to be a Windows phone because of the Qt requirement). Watchdog is also a good ‘end app’ for the phone since many users simply discard or swap in their old phones when upgrading, but now watchdog gives it a use as security device.
 
-\begin{thebibliography}{9}
-\bibitem{repproc}
-Exras Repository Process Definition, Maemo Wiki,
-\url{http://wiki.maemo.org/Extras_repository_process_definition}
-Page~\pageref{ref:repproc}
-
-\bibitem{promtest}
-Extras-Devel and Promoting to Extras-Testing, Maemo Wiki,
-\url{http://wiki.maemo.org/Extras-devel#Promoting_packages_to_extras-testing}
-Page~\pageref{ref:promtest}
-
-\bibitem{promext}
-Extras-Testing and Promiting to Extras, Maemo Wiki,
-\url{http://wiki.maemo.org/Extras-devel#Promoting_packages_to_extras-testing}
-Page~\pageref{ref:promext}
-
-\bibitem{phonser}
-Mehmet Tekman (tetris11\_), Phonestreamer Annouce Page, Maemo Forums,
-\url{http://talk.maemo.org/showthread.php?t=70877}
-Page~\pageref{ref:phonser}
-
-\bibitem{appraisal}
-User 'deed', Forum Post, PhoneStremer Announce Page, Maemo Forums,
-\url{http://talk.maemo.org/showpost.php?p=1255370&postcount=2}
-Page~\pageref{ref:appraisal}
-
-\end{thebibliography}
+%\begin{thebibliography}{9}
+%\end{thebibliography}
